--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-stars": "^2.2.5",
     "semantic-ui-css": "^2.5.0",
     "semantic-ui-react": "^2.1.5",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
